conf/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-nginx
  labels:
    label-key1: label-value1
    label-key2: label-value2
    label-key3: label-value3
spec:
  # volumes:
  #   - name: vol_1
  #     emptyDir: {}
  containers:
    - name: container-nginx-1
      image: nginx
      ports:
        - containerPort: 80
      # volumeMounts:
      #   - mountPath: /app/volume
      #     name: vol_1
      livenessProbe:
        httpGet:
          path: /health
          port: 80
        initialDelaySeconds: 0
        periodSeconds: 10
        timeoutSeconds: 1
        successThreshold: 1
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 0
        periodSeconds: 10
        timeoutSeconds: 1
        successThreshold: 1
        failureThreshold: 3
      startupProbe:
        httpGet:
          path: / 
          port: 80
        initialDelaySeconds: 0
        periodSeconds: 10
        timeoutSeconds: 1
        successThreshold: 1
        failureThreshold: 3
