conf/externalservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  labels:
    name: example-service
spec:
  selector:
    name: nginx
  type: ExternalName
  externalName: example.com
  ports:
    - port: 80
      targetPort: 80
