conf/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: webserver
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
